[workspace]
resolver = "2"
members = [
    "fireman",
    "fireball",
    "firebat/src-tauri",
    "iceball",
    "dryice",
    "fireman_macro",
]
exclude = ["iceball/architecture_doc_extractor"]

[workspace.package]
version = "0.0.1"
authors = ["Eveheeero <xhve00000@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Eveheeero/fireman"
homepage = "https://github.com/Eveheeero/fireman"
readme = "README.md"
keywords = ["decompiler", "reverse-engineering", "binary-analysis", "disassembler"]
categories = ["command-line-utilities", "development-tools", "parsing"]

[workspace.dependencies]
# Internal crates
fireball = { path = "fireball" }
fireman_macro = { path = "fireman_macro" }
iceball = { path = "iceball" }
dryice = { path = "dryice" }

# Common external dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11.1"
thiserror = "2.0"
anyhow = "1.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# Binary parsing and analysis
goblin = "0.10"
capstone = "0.13"
pdb = "0.8"
cpp_demangle = "0.4"

# Data structures
bitvec = "1"
hashbrown = "0.15"
num-bigint = "0.4"
num-traits = "0.2"

# GUI dependencies (Tauri ecosystem)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
ts-bind = "0.1.7"

# Procedural macro dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Performance and profiling
criterion = { version = "0.6", features = ["html_reports"] }

# Testing
proptest = "1.7"
test-case = "3.3"

# Cryptography
sha2 = "0.10"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
