[workspace]
resolver = "2"
members = [
    "fireman",
    "fireball",
    "firebat",
    "iceball",
    "dryice",
    "fireman_macro",
]
exclude = ["iceball/architecture_doc_extractor"]

[workspace.package]
version = "0.0.1"
authors = ["Eveheeero <xhve00000@gmail.com>"]
edition = "2024"
license = "GPL-2.0"
repository = "https://github.com/Eveheeero/fireman"
homepage = "https://github.com/Eveheeero/fireman"
readme = "README.md"

[workspace.dependencies]
# Internal crates
fireball = { path = "fireball" }
fireman_macro = { path = "fireman_macro" }
iceball = { path = "iceball" }
dryice = { path = "dryice" }

# Common external dependencies
clap = { version = "4.5", features = ["derive"] }
bitcode = { version = "0.6.7", features = ["derive"] }
flate2 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.12"
either = "1.15"
rhai = "1.23"
blake3 = "1"

# Binary parsing and analysis
goblin = "0.10"
capstone = "0.14"
pdb = "0.8"
gimli = "0.33"
cpp_demangle = "0.5"
rustc-demangle = "0.1"

# String matching
memchr = "2"
aho-corasick = "1"
heck = "0.5"

# Data structures
bitvec = "1"
hashbrown = "0.16"
num-bigint = "0.4"

[profile.bench]
debug = true
