[package]
name = "dryice"
version = "0.0.1"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
repository = "https://github.com/Eveheeero/fireman"
license = "GPL-2.0"
description = "IR Pattern Matching Framework used in fireball. (Reserved)"
homepage = "https://crates.io/crates/dryice"

[[bin]]
name = "glacier"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
