[package]
name = "dryice"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "IR Pattern Matching Framework used in fireball."
homepage = "https://crates.io/crates/dryice"

[[bin]]
name = "glacier"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
clap.workspace = true
fireball.workspace = true
flate2.workspace = true
hashbrown.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
