[package]
name = "fireball"
version = "0.0.1"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
repository = "https://github.com/Eveheeero/fireman"
license = "MIT"
description = "Decompiler library inspired by snowman"
homepage = "https://crates.io/crates/fireball"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
iceball = { path = "../iceball", version = "0.0.1" }
goblin = "0.8.2"
cpp_demangle = "0.4.0"
capstone = "0.12.0"
pdb = "0.8.0"
once_cell = "1.17.1"
regex = "1.7.0"
tracing = { version = "0.1", features = [
  "log",
  "max_level_trace",
  "release_max_level_off",
] }
bitvec = "1.0.1"
fireman_macro = { path = "../fireman_macro", version = "0.0.1" }

[dev-dependencies]
tracing-subscriber = "0.3"
