[package]
name = "fireball"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Decompiler library inspired by snowman"
homepage = "https://crates.io/crates/fireball"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
unified-arch = []

[dependencies]
iceball.workspace = true
goblin.workspace = true
cpp_demangle.workspace = true
capstone.workspace = true
pdb.workspace = true
tracing = { workspace = true, features = [
  "log",
  "max_level_trace",
  "release_max_level_off",
] }
bitvec.workspace = true
fireman_macro.workspace = true
hashbrown.workspace = true
num-bigint.workspace = true
unicorn-engine.workspace = true
thiserror.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
sha2.workspace = true
