[package]
name = "firebat"
version = "0.0.1"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
repository = "https://github.com/Eveheeero/fireman"
license = "MIT"
description = "GUI of Fireball"
homepage = "https://crates.io/crates/firebat"


[dependencies]
fireball = { path = "../fireball", version = "0.0.1" }
eframe = "0.18.0"
