[package]
name = "fireman"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Running Binary of Fireball"
homepage = "https://crates.io/crates/fireman"

[dependencies]
fireball.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
