[package]
name = "fireman"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Running Binary of Fireball"
homepage = "https://crates.io/crates/fireman"

[dependencies]
fireball = { workspace = true, version = "0.0.1" }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ratatui = "0.29"
tracing-subscriber.workspace = true
tracing = { workspace = true, features = [
  "max_level_trace",
  "release_max_level_debug",
] }
