[package]
name = "fireman_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Macro used in fireman library."
homepage = "https://crates.io/crates/fireman_macro"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
regex.workspace = true
