[package]
name = "fireman_macro"
version = "0.0.1"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
repository = "https://github.com/Eveheeero/fireman"
license = "GPL-2.0"
description = "Macro used in fireman library."
homepage = "https://crates.io/crates/fireman_macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "derive"] }
quote = "1"
proc-macro2 = "1"
regex = "1"
