[package]
name = "fireman_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Macro used in fireman library."
homepage = "https://crates.io/crates/fireman_macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "derive"] }
quote = "1.0"
proc-macro2 = "1.0"
regex.workspace = true
