[package]
name = "iceball"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Disassemble library used in fireball. (Reserved)"
homepage = "https://crates.io/crates/iceball"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
fireman_macro.workspace = true
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
