[package]
name = "iceball"
version = "0.0.1"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
repository = "https://github.com/Eveheeero/fireman"
license = "GPL-2.0"
description = "Disassemble library used in fireball. (Reserved)"
homepage = "https://crates.io/crates/iceball"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
fireman_macro = { path = "../fireman_macro", version = "0.0.1" }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]
