[package]
name = "firebat"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "GUI of Fireball"
homepage = "https://crates.io/crates/firebat"

[lib]
name = "firebat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
fireball.workspace = true
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
ts-bind.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
tsexport = []
