[package]
name = "firebat"
version = "0.0.1"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
repository = "https://github.com/Eveheeero/fireman"
license = "GPL-2.0"
description = "GUI of Fireball"
homepage = "https://crates.io/crates/firebat"

[lib]
name = "firebat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fireball = { path = "../../fireball", version = "0.0.1" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
ts-bind = "0.1.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
tsexport = []
