[package]
name = "firebat"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "GUI of Fireball"
homepage = "https://crates.io/crates/firebat"

[lib]
name = "firebat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fireball.workspace = true
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
ts-bind = "0.1.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
tsexport = []
